<resources>
    <string name="app_name">300CEM_hkforum</string>
    <string name="title_forum">Forum</string>
    <string name="title_setting">Setting</string>
    <string name="button_start">Start</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="gps_ststus">Location Status</string>
    <string name="time">Time</string>
    <string name="welcome">Welcome</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">regiser</string>
    <string name="login">Login</string>
    <string name="setting">Setting</string>
    <string name="newpost">New post</string>
    <string name="newreply">New reply</string>
    <string name="back">Back</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="newusername">New Username</string>
    <string name="logout">Logout</string>
    <string name="localrecord">Local Record</string>
    <string name="lang">Language</string>
    <string name="today">today</string>
    <string name="success">Success</string>
    <string name="fail">Failed</string>
    <string name="will">You will go to</string>
    <string name="pwhint">At least 6 digits.</string>
    <string name="notHongKong">You are not in Hong Kong!</string>
    <string name="newac">New account</string>
    <string name="finger">Login using your fingerprint.</string>
    <string name="blank">Blank</string>
    <string name="reply">Reply Success!</string>
    <string name="view">View at</string>
    <string name="record">Record</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="logoutS">Logout Success!</string>
    <string name="alertmessage">You can\'t change the post anymore!</string>
    <string name="sure">Are you sure ?</string>


</resources>
